[package]
name = "seance"
version = "0.1.0"
edition = "2021"
description = "🔮 Séance — Claude Code Session Necromancer"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
color-eyre = "0.6"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
strip = true
